--- a/index.css
+++ b/index.css
@@ -98,6 +98,16 @@ p {
   text-decoration: underline;
 }
 
+.nome-profissao {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgba(212, 150, 227, 0.2);
+  height: 300px;
+  width: 600px;
+  border-radius: 2%;
+}
 .fran-foto {
   width: 25%;
   border-radius: 100%;
@@ -215,6 +225,10 @@ p {
   display: flex;
   justify-content: space-around;
 }
+
+.lista {
+  width: 300px;
+}
 .contato {
   /* background-color: #b976ee; */
   background: rgba(212, 150, 227, 0.35);
@@ -226,12 +240,12 @@ p {
 .lista-contato {
   display: flex;
   justify-content: space-around;
-  align-items: center;
   flex-direction: row;
-  flex-start: end;
+  align-items: center;
   width: 100%;
   height: 40%;
   list-style-type: none;
+  padding-left: 0;
 }
 
 .p-contato {
@@ -248,11 +262,14 @@ p {
   margin-bottom: 6%;
   opacity: 0.7;
   transition: 1s ease-out;
+  margin-left: 30%;
 }
 
-/* .li-wpp::after {
-  content: "(71)99999-9999";
-} */
+.li-wpp,
+.li-instagram {
+  display: flex;
+  flex-direction: column;
+}
 
 .wpp:hover {
   transform: scale(1.07);
@@ -273,6 +290,7 @@ p {
   margin-bottom: 6%;
   opacity: 0.7;
   transition: 1s ease;
+  margin-left: 30%;
 }
 
 .li-instagram {
@@ -413,6 +431,7 @@ p {
   }
 
   .lista {
+    width: 500px;
   }
 
   .lista .lista-contato {
