--- a/css/mobile425.css
+++ b/css/mobile425.css
@@ -13,7 +13,8 @@
   }
 
   .containerIndex .nav-logo {
-    width: 15%;
+    width: 10vh;
+    padding: 7px;
   }
 
   /* CONTAINER APRESENTAÇÃO */
@@ -31,7 +32,7 @@
   }
 
   .apresentacao .fran-foto {
-    width: 50vh;
+    width: 45vh;
     margin-bottom: 10vh;
   }
 
@@ -62,7 +63,7 @@
 
 /* container servicos */
 
-.servicos .p-servicos {
+.p-servicos {
   font-size: 2rem;
 }
 
