font-size and heigth changed

--- a/css/screen1440.css
+++ b/css/screen1440.css
@@ -1,10 +1,10 @@
 @media screen and (min-width: 1440px) and (max-width: 1980px) {
   .itens-navegacao {
-    font-size: 2.6rem;
+    font-size: 1.4rem;
   }
 
   .nav-logo {
-    width: 7vw;
+    width: 4vw;
   }
 
   .nome-profissao {
@@ -27,7 +27,7 @@
 
   .p-portfolio {
     margin-top: 10px;
-    font-size: 5rem;
+    font-size: 3rem;
   }
 
   .lista-fotos {
@@ -36,16 +36,21 @@
   }
 
   .carousel-inner img {
-    height: 700px;
+    height: 500px;
   }
 
   .servicos .p-servicos {
-    font-size: 5rem;
+    font-size: 3rem;
+  }
+
+  .serv1 .sobrancelha-pinca,
+  .serv2 .sobrancelha-henna {
+    height: 350px;
   }
 
   .texto-design,
-  .texto-henna {
-    font-size: 2rem;
+  .serv2__container .texto-henna {
+    font-size: 1.6rem;
   }
 
   .contato {
@@ -53,6 +58,6 @@
   }
 
   .contato .p-contato {
-    font-size: 4rem;
+    font-size: 3rem;
   }
 }
